--- a/libprg/CMakeLists.txt
+++ b/libprg/CMakeLists.txt
@@ -4,14 +4,10 @@ cmake_minimum_required(VERSION 3.21)
 set(HEADERS
         "${CMAKE_CURRENT_LIST_DIR}/src/include/libprg/libprg.h"
 )
-# Add source files here manually
-set(SOURCES 
-       "${CMAKE_CURRENT_LIST_DIR}/src/libprg/sum.c"
-       "${CMAKE_CURRENT_LIST_DIR}/src/libprg/sub.c"
-       "${CMAKE_CURRENT_LIST_DIR}/src/libprg/libprg.c"       
-)
 
-add_library(libprg)
+add_library(libprg
+        src/libprog/pilha.c
+        src/libprog/fila.c)
 target_sources(libprg PUBLIC ${SOURCES})
 target_include_directories(libprg PUBLIC ${CMAKE_CURRENT_LIST_DIR}/src/include)
 
