--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,14 @@ project(libprg
 
 set(CMAKE_C_STANDARD 17)
 
-add_subdirectory(libprg)
+# Add source files here manually
+set(SOURCES
+        "${CMAKE_CURRENT_LIST_DIR}/src/libprog/fila.c"
+        "${CMAKE_CURRENT_LIST_DIR}/src/libprog/pilha.c"
+)
+
+add_subdirectory(libprg
+              libprg/src/include/libprg/pilha.c)
 
 # https://cmake.org/cmake/help/book/mastering-cmake/chapter/Packaging%20With%20CPack.html
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
